--- a/src/sass/components/_r-section-kitchen.scss
+++ b/src/sass/components/_r-section-kitchen.scss
@@ -283,8 +283,11 @@
       display: flex;
   
       &__wrapper {
-        display: flex;
         flex-wrap: wrap;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
       }
   
       &__first-row {
